# auth_solid

./: README.md  pyproject.toml
src/auth/application/: commiter.py  errors.py  pagination.py
src/auth/application/base/: interactors.py
src/auth/application/scenarios/account_sign_up/: interactor.py
src/auth/application/user/: errors.py  service_authorization.py
src/auth/application/user/ports/: identity_provider.py  service_authorization.py  user_data_gateway.py
src/auth/domain/base/: entity.py  value_object.py
src/auth/domain/user/: entity.py  enums.py  service.py  value_objects.py
src/auth/domain/user/errors/: existence.py
src/auth/domain/user/ports/: password_hasher.py  user_id_generator.py
src/auth/infrastructure/: custom_types.py  record_session.py
src/auth/infrastructure/adapters_application/: identity_provider_session.py  user_data_mapper_sqla.py
src/auth/infrastructure/base/: interactors.py
src/auth/infrastructure/contracts/: login.py  logout.py
src/auth/infrastructure/scenarios/: account_log_in.py  account_log_out.py
src/auth/infrastructure/session/: access_token_processor_jwt.py  data_mapper_sqla.py  errors.py  id_generator_str.py  persistence_sqla.py  timer_utc.py
src/auth/infrastructure/user/: persistence_sqla.py
src/auth/presentation/http/: cookie_params.py  dependencies.py  exception_handler.py  middleware_auth.py  router_api_v1.py  router_root.py
src/auth/setup/: app_factory.py
src/auth/setup/config/: constants.py  logs.py  settings.py
src/auth/setup/ioc/: enum_component.py  ioc_registry.py
(+25 files in other folders)
